--- a/cronometro.html
+++ b/cronometro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Debate IF Salgueiro</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
@@ -41,7 +41,7 @@ body {
 button {
   border: 0;
   padding: 8px 20px;
-  margin: 0 2px 5px 0;
+  margin: 0 2px 20px 0;
   border-radius: 5px;
   font-weight: 500;
   letter-spacing: 1px;
