--- a/cronometro.html
+++ b/cronometro.html
@@ -42,7 +42,8 @@ body {
 button {
   border: 0;
   padding: 8px 20px;
-  margin: 0 2px 20px 0;
+  margin-left: 10px;
+margin-right: 10px;
   border-radius: 5px;
   font-weight: 500;
   letter-spacing: 1px;
