--- a/cronometro.html
+++ b/cronometro.html
@@ -19,8 +19,7 @@ body {
 }
 
 .container {
-	margin: 0 auto;
-	width: 100%;
+	display: flex; flex-direction: column; justify-content: center; align-items: center;
 }
 
 .main {
