--- a/debate.html
+++ b/debate.html
@@ -97,7 +97,7 @@ h2{
   <body>
 		<div class="container">
             <div class="pergunta">
-                "Aos oprimidos é permitido uma vez a cada poucos anos decidir quais representantes específicos da classe opressora devem representá-los e reprimi-los." (Karl Marx)
+                <!--"Aos oprimidos é permitido uma vez a cada poucos anos decidir quais representantes específicos da classe opressora devem representá-los e reprimi-los." (Karl Marx)-->
             </div>
             <div id="fimtempo">
                 FIM DO TEMPO!              
